# fizzbuzz-architype

./: CMakeLists.txt  main.cpp
include/: Student.h  Teacher.h
src/: CMakeLists.txt  Student.cpp  Teacher.cpp
tests/: countoff.cpp
